--- a/src/app/recipe-form/recipe-form.component.html
+++ b/src/app/recipe-form/recipe-form.component.html
@@ -55,12 +55,19 @@
         <p>Aperçu :</p>
         <ngIf img src="recette.photo" class="w-25 rounded" alt="">
     </div> -->
+    <app-ingredient (ingrEvent)="addIngr($event)"></app-ingredient>
+  <ul class="ms-5">
+    <li *ngFor="let ingredient of ingredients">
+      {{ingredient.quantite}}
+      {{ingredient.unite}}
+      {{ingredient.nom}}
+    </li>
+  </ul>
+
+
+
 
     <button type="submit" class="btn btn-primary ms-5">Envoyer</button>
 </form>
 
-<script>
-  $(document).ready(function() {
-    $('.js-example-basic-multiple').select2();
-  });
-</script>
+
